--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,34 @@ body {
 
 .date {
   text-align: right;
-  margin-right: 15px;;
+  margin: 15px;;
 }
 
 .input {
-  text-align: center;
+  width: 100%;
+}
+
+input {
+  width: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items: center;
+  width: 100%;
+}
+
+#gnew {
+  width: 240px;
+  font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+  /* background-color: khaki; */
+  font-size: 18px;
+  line-height: 32px;
+  border: 1px solid transparent;
+  border-radius:0px;
+  border-bottom: 1px solid black;
 }
 
 li {
@@ -65,59 +88,5 @@ li {
 
 #glist {
   text-align:left;
-  margin-top: 30px;
-}
-
-/* Grid setting */
-
-/* .card {
-  scroll-snap-align: start;
-  display: grid;
-  width: 85vw;
-  height: 80vh;
-  grid-template-areas: 
-    "head"
-    "txt"
-    "foot";
-  grid-template-rows: 10% 1fr 80%;
-  border: 1px solid black;
-  margin: 20px;
-  border-radius: 7px;
-}
-
-.date {
-  grid-area: head;
-  text-align: right;
-  margin-right: 15px;;
-}
-
-.input {
-  grid-area: txt;
-  text-align: center;
-}
-
-li {
-  grid-area: foot;
-  margin: 20px;
-  font-size: 20px;
-} */
-
-/* End */
-
-#form {
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items: center;
-}
-
-
-#new {
-  font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-  font-size: 18px;
-  line-height: 28px;
-  border: 1px solid transparent;
-  border-radius:0px;
-  border-bottom: 1px solid black;
- 
+  margin: 13%;
 }
