--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ form {
   width: 100%;
 }
 
-#gnew {
+#gnew, #anew {
   width: 240px;
   font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
   /* background-color: khaki; */
@@ -86,7 +86,7 @@ li {
   font-size: 20px;
 }
 
-#glist {
+#glist, #alist {
   text-align:left;
   margin: 13%;
 }
