Create today's card dynamically

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body {
   /* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
   Helvetica, Arial, "Lucida Grande", sans-serif; */
   height: 100%;
+  /* background: linear-gradient(to right, lightgrey, ghostwhite); */
+  /* background-color: rgba(0, 148, 50,0.7); */
 }
 
 .container {
@@ -32,6 +34,7 @@ body {
   width: 100vw;
   height: 85vh;
   justify-content: center;
+  align-items: center;
 }
 
 .cardcard {
@@ -46,6 +49,8 @@ body {
   border: 1px solid black;
   margin: 20px;
   border-radius: 11px;
+  background-color: white;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.08); */
 }
 
 footer {
@@ -67,7 +72,7 @@ footer {
   margin: 10px;
   /* border: 1px solid white; */
   border-radius: 48%;
-  transition: .5s;
+  transition: .4s;
   font-size: 17px;
 }
 
@@ -93,12 +98,18 @@ h4 {
   font-weight: 300;
 }
 
-.input {
+.main {
   width: 100%;
 }
 
 input {
-  width: 100%;
+  width: 240px;
+  font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+  font-size: 18px;
+  line-height: 32px;
+  border: none;
+  border-radius:0px;
+  border-bottom: 1px solid black;
 }
 
 form {
@@ -109,18 +120,15 @@ form {
   width: 100%;
 }
 
-#gnew, #anew {
+/* #gnew, #anew {
   width: 240px;
-  /* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-  Helvetica, Arial, "Lucida Grande", sans-serif; */
   font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-  /* background-color: khaki; */
   font-size: 18px;
   line-height: 32px;
   border: 1px solid transparent;
   border-radius:0px;
   border-bottom: 1px solid black;
-}
+} */
 
 .card li {
   margin: 20px;
@@ -138,10 +146,15 @@ form {
   background-color: rgb(240, 140, 157);
 }
 
-#glist, #alist {
+ol {
   text-align:left;
   margin: 11% 13% 0 13%;
 }
+
+/* #glist, #alist {
+  text-align:left;
+  margin: 11% 13% 0 13%;
+} */
 
 #dotsUlHolder, #dotsUlHolder ul{
   display: flex;
@@ -197,8 +210,26 @@ form {
   }
 }
 
+@media only screen and (min-width: 850px) {
+  .cardcard {
+    width: 38%;
+  }
+}
+
 @media only screen and (min-width: 1000px) {
   .cardcard {
     width: 33%;
+  }
+}
+
+@media only screen and (min-width: 1150px) {
+  .cardcard {
+    width: 30%;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .cardcard {
+    width: 25%;
   }
 }
