--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   scroll-snap-align: center;
   flex: none;
   width: 100vw;
-  height: 85vh;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -43,7 +43,7 @@ body {
   flex-direction: column;
   flex: 0 0 auto;
   width: 85%;
-  height: 90%;
+  height: 85%;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid black;
@@ -66,7 +66,7 @@ footer {
   justify-content: space-between;
 }
 
-.fas {
+.fasd {
   display: inline-block;
   text-align: center;
   width: 17px;
@@ -81,10 +81,35 @@ footer {
   font-size: 17px;
 }
 
-.fas:hover {
+.fasd:hover {
   background-color: khaki;
   color: black;
 }
+
+.fasr {
+  display: inline-block;
+  text-align: center;
+  width: 17px;
+  height: 17px;
+  line-height: 17px;
+  color: lightgrey;
+  padding: 15px;
+  margin: 10px;
+  /* border: 1px solid black; */
+  border-radius: 50%;
+  transition: .4s;
+  font-size: 17px;
+}
+
+.fasr:hover {
+  /* background-color: grey; */
+  color: lightgrey;
+}
+
+/* .fasd:hover {
+  background-color: khaki;
+  color: black;
+} */
 
 /* .red{
   background-color: salmon;
