--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,20 @@
   }
 
 body {
+  display: flex;
+  flex-direction: row;
   font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
   background-color: seagreen;
-  display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   height: calc(var(--vh, 1vh) * 100);
   /* overflow: hidden; */
 }
 
 #snapcontainer {
   /* overflow: scroll; Somehow this conflict with scrollTop */ 
-  height: calc(var(--vh, 1vh) * 100);
-  scroll-snap-type: mandatory;
-  align-items: center;
+  /* height: calc(var(--vh, 1vh) * 100);
+  scroll-snap-type: y mandatory;
+  align-items: center; */
 }
 
 .outter {
@@ -39,7 +40,7 @@ body {
   flex: none;
   flex-flow: row nowrap;
   place-items: center center;
-  margin: auto;
+  margin: 15px;
   /* justify-content: center; */
   /* align-items: center; */
 }
