Cursor turns to pointer when hover on ol

--- a/css/style.css
+++ b/css/style.css
@@ -198,10 +198,12 @@ form {
 
 .goal ol li:hover {
   background-color: khaki;
+  cursor: pointer;
 }
 
 .achi ol li:hover {
   background-color: khaki;
+  cursor: pointer;
 }
 
 ol {
