Separate goals and chores arrays in LS and set dragging class

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,14 @@ ol {
   color: black;
 }
 
+.draggable {
+
+}
+
+.dragging {
+  opacity: .35;
+}
+
 /* @media only screen and (min-width: 400px) {
   .cardcard {
     width: 75%;
