--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ form {
   /* background-color: khaki; */
   border-radius: 2.5px;
   line-height: 35px;
-  list-style-position: inside;
+  /* list-style-position: inside; */
   padding-left: 1em;
 }
 
@@ -233,7 +233,8 @@ form {
 
 ol {
   text-align: left;
-  margin: 11% 10% 0 10%;
+  margin: 11% 10% 0 16%;
+  /* margin: 11% 10% 0 10%; */
 }
 
 .crossOut {
